--- a/index.html
+++ b/index.html
@@ -37,29 +37,32 @@
                 $('.banner-btn').css({opacity:0});
             })
             jQuery(".fullSlide").slide({ titCell:".hd ul", mainCell:".bd ul", effect:"leftLoop", vis:"auto", autoPlay:true, autoPage:true, trigger:"click" });
+            $(window).resize(function(){
+               window.location.href=window.location.href
+            })
         })
     </script>
 
 </head>
 <body>
-  <div class="header">
-     <div class="header-con">
-         <div class="logo">
-             <a href="javascript:;">
-                 <img src="image/logo.png">
-             </a>
-         </div>
-         <div class="nav">
-             <ul>
-                 <li><a href="javascript:;">商品介绍</a></li>
-                 <li><a href="javascript:;">商品介绍</a></li>
-                 <li><a href="javascript:;">商品介绍</a></li>
-                 <li><a href="javascript:;">商品介绍</a></li>
-                 <li><a href="javascript:;">商品介绍</a></li>
-             </ul>
-         </div>
-     </div>
-  </div>
+<div class="header">
+    <div class="header-con">
+        <div class="logo">
+            <a href="javascript:;">
+                <img src="image/logo.png">
+            </a>
+        </div>
+        <div class="nav">
+            <ul>
+                <li><a href="javascript:;">商品介绍</a></li>
+                <li><a href="javascript:;">商品介绍</a></li>
+                <li><a href="javascript:;">商品介绍</a></li>
+                <li><a href="javascript:;">商品介绍</a></li>
+                <li><a href="javascript:;">商品介绍</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
 <div class="banner fullSlide">
     <div class="bd">
         <ul>
@@ -76,9 +79,9 @@
 </div>
 <div class="con">
     <div class="con-idea">
-         <div class="con-idea-head">
-             企业理念
-         </div>
+        <div class="con-idea-head">
+            企业理念
+        </div>
         <h2 class="con-idea-tit">
             企业理念的标题
         </h2>
@@ -91,18 +94,21 @@
     <div class="con-int con-int-one">
         <img src="image/intone.png" alt="">
         <div class="con-int-continer">
-             <div class="c-i-cot-con c-i-cot-con-left">
-                 <h1>Freecall</h1>
-                 <p class="zy">小标题小标题小标题小标题</p>
-                 <p>内容内容内容内容内容内容内容</p>
-                 <p>内容内容内容内容内容内容内容</p>
-                 <p>内容内容内容内容内容内容内容</p>
-                 <p>内容内容内容内容内容内容内容</p>
-                 <p>内容内容内容内容内容内容内容</p>
-                 <p>内容内容内容内容内容内容内容</p>
-                 <p>内容内容内容内容内容内容内容</p>
-                 <a href="javascript:;" class="but">按钮</a>
-             </div>
+            <div class="c-i-cot-con c-i-cot-con-left">
+                <h1>Freecall</h1>
+                <p class="zy">小标题小标题小标题小标题</p>
+                <p>内容内容内容内容内容内容内容</p>
+                <p>内容内容内容内容内容内容内容</p>
+                <p>内容内容内容内容内容内容内容</p>
+                <p>内容内容内容内容内容内容内容</p>
+                <p>内容内容内容内容内容内容内容</p>
+                <p>内容内容内容内容内容内容内容</p>
+                <p>内容内容内容内容内容内容内容</p>
+                <a href="javascript:;" class="but">按钮</a>
+            </div>
+            <div class="con-int-img1">
+                <img src="image/conintimg1.png" alt="">
+            </div>
         </div>
     </div>
     <div class="con-int con-int-two">
@@ -116,9 +122,10 @@
                 <p>内容内容内容内容内容内容内容</p>
                 <p>内容内容内容内容内容内容内容</p>
                 <p>内容内容内容内容内容内容内容</p>
-                <p>内容内容内容内容内容内容内容</p>
-                <p>内容内容内容内容内容内容内容</p>
                 <a href="javascript:;" class="but">按钮</a>
+            </div>
+            <div class="con-int-img2">
+                <img src="image/conintimg2.png" alt="">
             </div>
         </div>
     </div>
@@ -137,16 +144,19 @@
                 <p>内容内容内容内容内容内容内容</p>
                 <a href="javascript:;" class="but">按钮</a>
             </div>
+         <div class="con-int-img3">
+             <img src="image/conintimg3.png" alt="">
+         </div>
         </div>
     </div>
 </div>
- <div class="footer">
-      <div class="footer-con">
-          <div class="footer-con-continer">
-           <div class="footer-con-l">
-               <a href="javascript:;">
-                   <img src="image/logow.png" alt="">
-               </a>   
+<div class="footer">
+    <div class="footer-con">
+        <div class="footer-con-continer">
+            <div class="footer-con-l">
+                <a href="javascript:;">
+                    <img src="image/logow.png" alt="">
+                </a>
             </div>
             <div class="footer-con-c">
                 <div class="fnav">
@@ -182,22 +192,22 @@
                     </ul>
                 </div>
             </div>
-             <div class="footer-con-r">
-                 <div class="phone">
-                        <p class="phone-num">03-6279-0521</p>
-                        <p class="phone-dz">联系地址地地</p>
-                 </div>
-                 <div class="phone-icon">
-                     <img src="image/phoneicon.png" alt="">
-                 </div>
+            <div class="footer-con-r">
+                <div class="phone">
+                    <p class="phone-num">03-6279-0521</p>
+                    <p class="phone-dz">联系地址地地</p>
+                </div>
+                <div class="phone-icon">
+                    <img src="image/phoneicon.png" alt="">
+                </div>
             </div>
-          </div>
-      </div>
-     <div class="footer-ft">
-         <p>
-             Copyright 2016 CLOOPEN.ALL rights reserved.
-         </p>
-     </div>
- </div>
+        </div>
+    </div>
+    <div class="footer-ft">
+        <p>
+            Copyright 2016 CLOOPEN.ALL rights reserved.
+        </p>
+    </div>
+</div>
 </body>
 </html>
