--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/about.css">
     <!--[if lt IE 9]>
     <script type="text/javascript" src="js/PIE_IE678.js"></script>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/aboutmin.css">
     <![endif]-->
     <!--[if IE 9]>
     <script type="text/javascript" src="js/PIE_IE9.js"></script>
@@ -37,9 +37,6 @@
                 $('.banner-btn').css({opacity:0});
             })
             jQuery(".fullSlide").slide({ titCell:".hd ul", mainCell:".bd ul", effect:"leftLoop", vis:"auto", autoPlay:true, autoPage:true, trigger:"click" });
-            $(window).resize(function(){
-                window.location.href=window.location.href
-            })
 
            $('.ifr').load(function(){
                $('.login').hide();
@@ -59,11 +56,11 @@
         </div>
         <div class="nav">
             <ul>
-                <li><a href="javascript:;">商品介绍</a></li>
-                <li><a href="javascript:;">商品介绍</a></li>
-                <li><a href="javascript:;">商品介绍</a></li>
-                <li><a href="javascript:;">商品介绍</a></li>
-                <li><a href="javascript:;">商品介绍</a></li>
+                <li><a href="javascript:;">製品紹介</a></li>
+                <li><a href="javascript:;">会社概要</a></li>
+                <li><a href="javascript:;">事業内容</a></li>
+                <li><a href="javascript:;">アクセス</a></li>
+                <li><a href="javascript:;">問い合わせ</a></li>
             </ul>
         </div>
     </div>
@@ -152,42 +149,39 @@
             </div>
             <div class="footer-con-c">
                 <div class="fnav">
-                    <p class="footer-title">标题标题标题</p>
+                    <p class="footer-title">Company</p>
                     <ul>
-                        <li><a href="javascript:;">内容内容内容</a></li>
-                        <li><a href="javascript:;">内容内容内容</a></li>
-                        <li><a href="javascript:;">内容内容内容</a></li>
+                        <li><a href="javascript:;">会社概要</a></li>
+                        <li><a href="javascript:;">事業内容</a></li>
+                        <li><a href="javascript:;">アクセス</a></li>
                     </ul>
                 </div>
                 <div class="fnav">
-                    <p class="footer-title">标题标题标题</p>
+                    <p class="footer-title">Cloud service</p>
                     <ul>
-                        <li><a href="javascript:;">内容内容内容</a></li>
-                        <li><a href="javascript:;">内容内容内容</a></li>
-                        <li><a href="javascript:;">内容内容内容</a></li>
+                        <li><a href="javascript:;">サービス内容</a></li>
+                        <li><a href="javascript:;">取引先</a></li>
                     </ul>
                 </div>
                 <div class="fnav">
-                    <p class="footer-title">标题标题标题</p>
+                    <p class="footer-title">SIMカード</p>
                     <ul>
-                        <li><a href="javascript:;">内容内容内容</a></li>
-                        <li><a href="javascript:;">内容内容内容</a></li>
-                        <li><a href="javascript:;">内容内容内容</a></li>
+                        <li><a href="javascript:;">サービス内容</a></li>
+                        <li><a href="javascript:;">取引先</a></li>
                     </ul>
                 </div>
                 <div class="fnav af">
-                    <p class="footer-title">标题标题标题</p>
+                    <p class="footer-title">Skyroam</p>
                     <ul>
-                        <li><a href="javascript:;">内容内容内容</a></li>
-                        <li><a href="javascript:;">内容内容内容</a></li>
-                        <li><a href="javascript:;">内容内容内容</a></li>
+                        <li><a href="javascript:;">サービス内容</a></li>
+                        <li><a href="javascript:;">取引先</a></li>
                     </ul>
                 </div>
             </div>
             <div class="footer-con-r">
                 <div class="phone">
                     <p class="phone-num">03-6279-0521</p>
-                    <p class="phone-dz">联系地址地地</p>
+                    <p class="phone-dz">お問い合わせはこちら</p>
                 </div>
                 <div class="phone-icon">
                     <img src="image/phoneicon.png" alt="">
@@ -197,7 +191,7 @@
     </div>
     <div class="footer-ft">
         <p>
-            Copyright 2016 CLOOPEN.ALL rights reserved.
+            Copyright © 2016 CLOOPEN. All rights reserved.
         </p>
     </div>
 </div>
