--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <!--[if IE 9]>
     <script type="text/javascript" src="js/PIE_IE9.js"></script>
     <![endif]-->
-
     <script>
         $(document).ready(function(){
             resize(1366);
@@ -37,9 +36,10 @@
                 $('.banner-btn').css({opacity:0});
             })
             jQuery(".fullSlide").slide({ titCell:".hd ul", mainCell:".bd ul", effect:"leftLoop", vis:"auto", autoPlay:true, autoPage:true, trigger:"click" });
+//           alert($(window).width())
+
         })
     </script>
-
 </head>
 <body>
 <div class="header">
@@ -51,11 +51,11 @@
         </div>
         <div class="nav">
             <ul>
-                <li><a href="javascript:;">商品介绍</a></li>
-                <li><a href="javascript:;">商品介绍</a></li>
-                <li><a href="javascript:;">商品介绍</a></li>
-                <li><a href="javascript:;">商品介绍</a></li>
-                <li><a href="javascript:;">商品介绍</a></li>
+                <li><a href="javascript:;">製品紹介</a></li>
+                <li><a href="javascript:;">会社概要</a></li>
+                <li><a href="javascript:;">事業内容</a></li>
+                <li><a href="javascript:;">アクセス</a></li>
+                <li><a href="javascript:;">問い合わせ</a></li>
             </ul>
         </div>
     </div>
@@ -77,15 +77,17 @@
 <div class="con">
     <div class="con-idea">
         <div class="con-idea-head">
-            企业理念
+            企業理念
         </div>
         <h2 class="con-idea-tit">
-            企业理念的标题
+            「一歩先の満足」
         </h2>
         <div class="con-idea-con">
-            企业理念的内容企业理念的内容企业理念的内容企业理念的内容企业理念的内容企业理念的内容
-            企业理念的内容企业理念的内容企业理念的内容企业理念的内容企业理念的内容企业理念的内容
-            念的内容企业理念的内
+            <p>CLOOPENは尽きることのない成長を遂げるために、</p>
+            <p>常に高く困難な目標を持ち、より良いサービスを追い求めます。</p>
+            <p>私たちは、お客さまのご要望にお応えするだけではなく、</p>
+            <p>一つ先の満足をご提供することで企業の成長があると考えます。</p>
+            <p>そのための努力を惜しまず、豊かな社会の発展に力を尽くしていきます。</p>
         </div>
     </div>
     <div class="con-int con-int-one">
@@ -93,15 +95,15 @@
         <div class="con-int-continer">
             <div class="c-i-cot-con c-i-cot-con-left">
                 <h1>Freecall</h1>
-                <p class="zy">小标题小标题小标题小标题</p>
-                <p>内容内容内容内容内容内容内容</p>
-                <p>内容内容内容内容内容内容内容</p>
-                <p>内容内容内容内容内容内容内容</p>
-                <p>内容内容内容内容内容内容内容</p>
-                <p>内容内容内容内容内容内容内容</p>
-                <p>内容内容内容内容内容内容内容</p>
-                <p>内容内容内容内容内容内容内容</p>
-                <a href="javascript:;" class="but">按钮</a>
+                <p class="zy">クラウドPBXビジネスフォンサービス</p>
+                <p>今までのビジネスフォンは、PBXを買わされ、複雑な設計を行い、</p>
+                <p>そして高額な工事費を支払って施工会社が社内に電話を設置する。</p>
+                <p>しかし、「Freecall」が、そんなビジネスフォン業界を改革します。</p>
+                <p>必要なシステム機能をワンパッケージ化したサービスとして提供されるので、</p>
+                <p>初期設定のみですぐにサービスを利用可能。</p>
+                <p>従来のビジネスフォンシステムの投入費用やランニングコストに比べて圧倒</p>
+                <p>的に早く安くご利用できます。</p>
+                <a href="javascript:;" class="but">詳しくはこちらへ</a>
             </div>
             <div class="con-int-img1">
                 <img src="image/conintimg1.png" alt="">
@@ -112,14 +114,14 @@
         <img src="image/inttwo.png" alt="">
         <div class="con-int-continer">
             <div class="c-i-cot-con c-i-cot-con-right">
-                <h1>Freecall</h1>
-                <p class="zy">小标题小标题小标题小标题</p>
-                <p>内容内容内容内容内容内容内容</p>
-                <p>内容内容内容内容内容内容内容</p>
-                <p>内容内容内容内容内容内容内容</p>
-                <p>内容内容内容内容内容内容内容</p>
-                <p>内容内容内容内容内容内容内容</p>
-                <a href="javascript:;" class="but">按钮</a>
+                <h1>Cloopen SIMcard</h1>
+                <p class="zy">Cloopen 海外プリペイドSIM</p>
+                <p>Cloopenは世界70以上の国・地域の通信事業者と提携して、</p>
+                <p>オリジナルなプランを製作して、海外渡航者向けのモバイルデータ</p>
+                <p>通信/音声通話SIMをご提供します。Cloopenの海外用SIMカード</p>
+                <p>はお客様のスマホやタブレットに挿すだけで、</p>
+                <p>身軽でおトクに海外でネットや通話が楽しめます。</p>
+                <a href="javascript:;" class="but">詳しくはこちらへ</a>
             </div>
             <div class="con-int-img2">
                 <img src="image/conintimg2.png" alt="">
@@ -130,16 +132,16 @@
         <img src="image/intthree.png" alt="">
         <div class="con-int-continer">
             <div class="c-i-cot-con c-i-cot-con-left">
-                <h1>Freecall</h1>
-                <p class="zy">小标题小标题小标题小标题</p>
-                <p>内容内容内容内容内容内容内容</p>
-                <p>内容内容内容内容内容内容内容</p>
-                <p>内容内容内容内容内容内容内容</p>
-                <p>内容内容内容内容内容内容内容</p>
-                <p>内容内容内容内容内容内容内容</p>
-                <p>内容内容内容内容内容内容内容</p>
-                <p>内容内容内容内容内容内容内容</p>
-                <a href="javascript:;" class="but">按钮</a>
+                <h1>Cloopen skyrom</h1>
+                <p class="zy">Cloopen スカイロームサービス</p>
+                <p>海外でも「スカイローム」が１台あれば、同時に5台まで（iPhoneやアンドロ</p>
+                <p>イド端末などのスマホ、iPadやWindows PC、Mac book 、無線LAN内蔵</p>
+                <p>ゲーム機など）、無線LAN対応機器を接続しインターネットにアクセスできま</p>
+                <p>す。海外用の「スカイローム」は安心のパケット定額制だから今まで気になっ</p>
+                <p>ていた海外ローミング時のパケット代による、いわゆる「パケ死」もナシ。利用</p>
+                <p>可能国はアメリカ・ハワイ・イギリス・中国・韓国などの渡航者数が多い国をは</p>
+                <p>じめ、世界200以上の国・地域ご利で用いただけます</p>
+                <a href="javascript:;" class="but">詳しくはこちらへ</a>
             </div>
          <div class="con-int-img3">
              <img src="image/conintimg3.png" alt="">
@@ -157,42 +159,39 @@
             </div>
             <div class="footer-con-c">
                 <div class="fnav">
-                    <p class="footer-title">标题标题标题</p>
+                    <p class="footer-title">Company</p>
                     <ul>
-                        <li><a href="javascript:;">内容内容内容</a></li>
-                        <li><a href="javascript:;">内容内容内容</a></li>
-                        <li><a href="javascript:;">内容内容内容</a></li>
+                        <li><a href="javascript:;">会社概要</a></li>
+                        <li><a href="javascript:;">事業内容</a></li>
+                        <li><a href="javascript:;">アクセス</a></li>
                     </ul>
                 </div>
                 <div class="fnav">
-                    <p class="footer-title">标题标题标题</p>
+                    <p class="footer-title">Cloud service</p>
                     <ul>
-                        <li><a href="javascript:;">内容内容内容</a></li>
-                        <li><a href="javascript:;">内容内容内容</a></li>
-                        <li><a href="javascript:;">内容内容内容</a></li>
+                        <li><a href="javascript:;">サービス内容</a></li>
+                        <li><a href="javascript:;">取引先</a></li>
                     </ul>
                 </div>
                 <div class="fnav">
-                    <p class="footer-title">标题标题标题</p>
+                    <p class="footer-title">SIMカード</p>
                     <ul>
-                        <li><a href="javascript:;">内容内容内容</a></li>
-                        <li><a href="javascript:;">内容内容内容</a></li>
-                        <li><a href="javascript:;">内容内容内容</a></li>
+                        <li><a href="javascript:;">サービス内容</a></li>
+                        <li><a href="javascript:;">取引先</a></li>
                     </ul>
                 </div>
                 <div class="fnav af">
-                    <p class="footer-title">标题标题标题</p>
+                    <p class="footer-title">Skyroam</p>
                     <ul>
-                        <li><a href="javascript:;">内容内容内容</a></li>
-                        <li><a href="javascript:;">内容内容内容</a></li>
-                        <li><a href="javascript:;">内容内容内容</a></li>
+                        <li><a href="javascript:;">サービス内容</a></li>
+                        <li><a href="javascript:;">取引先</a></li>
                     </ul>
                 </div>
             </div>
             <div class="footer-con-r">
                 <div class="phone">
                     <p class="phone-num">03-6279-0521</p>
-                    <p class="phone-dz">联系地址地地</p>
+                    <p class="phone-dz">お問い合わせはこちら</p>
                 </div>
                 <div class="phone-icon">
                     <img src="image/phoneicon.png" alt="">
@@ -202,7 +201,7 @@
     </div>
     <div class="footer-ft">
         <p>
-            Copyright 2016 CLOOPEN.ALL rights reserved.
+            Copyright © 2016 CLOOPEN. All rights reserved.
         </p>
     </div>
 </div>
