--- a/three.html
+++ b/three.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/three.css">
     <!--[if lt IE 9]>
     <script type="text/javascript" src="js/PIE_IE678.js"></script>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/threemin.css">
     <![endif]-->
     <!--[if IE 9]>
     <script type="text/javascript" src="js/PIE_IE9.js"></script>
@@ -21,6 +21,12 @@
             resize(1366);
             if (window.PIE) {
                 $('.phone').each(function() {
+                    PIE.attach(this);
+                });
+                $('.banner-but').each(function() {
+                    PIE.attach(this);
+                });
+                $('.con-two-right .con-two-but').each(function() {
                     PIE.attach(this);
                 });
                 setTimeout(function(){
@@ -37,9 +43,6 @@
                 $('.banner-btn').css({opacity:0});
             })
             jQuery(".fullSlide").slide({ titCell:".hd ul", mainCell:".bd ul", effect:"leftLoop", vis:"auto", autoPlay:true, autoPage:true, trigger:"click" });
-            $(window).resize(function(){
-                window.location.href=window.location.href
-            })
 
             $('.ifr').load(function(){
                 $('.login').hide();
@@ -59,11 +62,11 @@
         </div>
         <div class="nav">
             <ul>
-                <li><a href="javascript:;">商品介绍</a></li>
-                <li><a href="javascript:;">商品介绍</a></li>
-                <li><a href="javascript:;">商品介绍</a></li>
-                <li><a href="javascript:;">商品介绍</a></li>
-                <li><a href="javascript:;">商品介绍</a></li>
+                <li><a href="javascript:;">製品紹介</a></li>
+                <li><a href="javascript:;">会社概要</a></li>
+                <li><a href="javascript:;">事業内容</a></li>
+                <li><a href="javascript:;">アクセス</a></li>
+                <li><a href="javascript:;">問い合わせ</a></li>
             </ul>
         </div>
     </div>
@@ -76,7 +79,102 @@
     </div>
 </div>
 <!--介绍开始-->
-
+<div class="con">
+    <div class="con-one">
+        <img src="image/未标题-3.png" alt="">
+        <div class="con-one-continer">
+            <div class="con-one-con">
+               <div class="con-one-tit">
+                   MVNOとは
+               </div>
+                <div class="con-one-ct">
+                    <p>SIMフリーが世の中に知られると同時にMVNO(エムブイエヌオー)という</p>
+                    <p>言葉も世に知られ始めました。MVNOは、Mobile Virtual Network </p>
+                    <p>Operator（仮想移動体通信事業者）の略です。MVNOが発売するSIMは</p>
+                    <p>格安SIMと呼ばれております。MVNO事業者から提供されている格安SIM</p>
+                    <p>を契約することで、無線通信を利用することができます。</p>
+                </div>
+                <div class="con-one-ct">
+                    <p>今までは、docomoやau、ソフトバンクといった、いわゆるキャリア・携</p>
+                    <p>帯会社（MNO: Mobile Network Operator 移動体通信業者といいます） </p>
+                    <p>と契約することでユーザーが無線通信を利用することができました。弊</p>
+                    <p>社はMVNOとして、こういった携帯会社の通信インフラを借りることで、</p>
+                    <p>格安でユーザーに無線通信を提供することができ、主要な携帯会社のド</p>
+                    <p>コモやソフトバンクの通信網を使用しているため、携帯会社と遜色のな</p>
+                    <p>い高品質の無線通信を利用することが可能です。</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="con-one">
+        <img src="image/未标题-4.png" alt="">
+        <div class="con-two-continer">
+             <div class="con-two-left">
+                 <img src="image/threephone.png" alt="">
+                 <div class="con-two-left-c">
+                     <p class="con-two-tit">
+                         ①  Cloopen モバイルサービス
+                     </p>
+                     <p>
+                         FOMA網とソフトバンク回線を使い、デジタル通信に特化したSIMカード
+                     </p>
+                     <p>
+                         通信のコストを大幅に下げ、高品質なモバイル通信サービスご提供します。
+                     </p>
+                     <p>
+                         Cloopenならではのオリジナルなデータ、通話プランをご提案します。
+                     </p>
+                 </div>
+             </div>
+            <div class="con-two-right">
+                <ul>
+                    <li><div class="con-two-but two-one">帯域運用</div></li>
+                    <li><div class="con-two-but two-two">管理システム構築</div></li>
+                    <li><div class="con-two-but two-one">プラン設計</div></li>
+                    <li><div class="con-two-but two-four">プリペイドSIM</div></li>
+                    <li><div class="con-two-but two-five">APN設定</div></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+<!--中部内容-->
+<div class="mid">
+    <img src="image/threebanner2.png" alt="">
+    <p>購入から利用開始まで、簡単3ステップ</p>
+</div>
+<!--country列表-->
+<div class="country">
+    <div class="country-continer">
+        <div class="contry-continer-t">
+           <p class="contry-continer-title">②  Cloopen 海外プリペイドSIM</p>
+            <p>Cloopenは世界70以上の国・地域の通信事業者と提携して、オリジナルなプ</p>
+            <p>ランを製作して、海外渡航者向けのモバイルデータ通信/音声通話SIMをご提</p>
+            <p>供します。Cloopenの海外用SIMカードはお客様のスマホやタブレットに挿す</p>
+            <p>だけで、身軽でおトクに海外でネットや通話が楽しめます。</p>
+        </div>
+        <div class="contry-continer-b">
+            <ul>
+                <li><img src="image/country1.png" alt="">Japan</li>
+                <li><img src="image/country2.png" alt="">Korea,South</li>
+                <li><img src="image/country3.png" alt="">Vietnam</li>
+                <li><img src="image/country4.png" alt="">Malaysla</li>
+                <li><img src="image/country5.png" alt="">China</li>
+                <li><img src="image/country6.png" alt="">HongKong</li>
+                <li><img src="image/country7.png" alt="">Taiwan</li>
+                <li><img src="image/country8.png" alt="">Thailand</li>
+                <li><img src="image/country9.png" alt="">Trukey</li>
+                <li><img src="image/country10.png" alt="">Singapore</li>
+                <li><img src="image/country11.png" alt="">United Kingdom</li>
+                <li><img src="image/country12.png" alt="">Germany</li>
+                <li><img src="image/country13.png" alt="">United States</li>
+                <li><img src="image/country14.png" alt="">Italy</li>
+                <li><img src="image/country15.png" alt="">Canada</li>
+                <li><img src="image/country16.png" alt="">France</li>
+            </ul>
+        </div>
+    </div>
+</div>
 <!--页脚-->
 <div class="footer">
     <div class="footer-con">
@@ -88,42 +186,39 @@
             </div>
             <div class="footer-con-c">
                 <div class="fnav">
-                    <p class="footer-title">标题标题标题</p>
+                    <p class="footer-title">Company</p>
                     <ul>
-                        <li><a href="javascript:;">内容内容内容</a></li>
-                        <li><a href="javascript:;">内容内容内容</a></li>
-                        <li><a href="javascript:;">内容内容内容</a></li>
+                        <li><a href="javascript:;">会社概要</a></li>
+                        <li><a href="javascript:;">事業内容</a></li>
+                        <li><a href="javascript:;">アクセス</a></li>
                     </ul>
                 </div>
                 <div class="fnav">
-                    <p class="footer-title">标题标题标题</p>
+                    <p class="footer-title">Cloud service</p>
                     <ul>
-                        <li><a href="javascript:;">内容内容内容</a></li>
-                        <li><a href="javascript:;">内容内容内容</a></li>
-                        <li><a href="javascript:;">内容内容内容</a></li>
+                        <li><a href="javascript:;">サービス内容</a></li>
+                        <li><a href="javascript:;">取引先</a></li>
                     </ul>
                 </div>
                 <div class="fnav">
-                    <p class="footer-title">标题标题标题</p>
+                    <p class="footer-title">SIMカード</p>
                     <ul>
-                        <li><a href="javascript:;">内容内容内容</a></li>
-                        <li><a href="javascript:;">内容内容内容</a></li>
-                        <li><a href="javascript:;">内容内容内容</a></li>
+                        <li><a href="javascript:;">サービス内容</a></li>
+                        <li><a href="javascript:;">取引先</a></li>
                     </ul>
                 </div>
                 <div class="fnav af">
-                    <p class="footer-title">标题标题标题</p>
+                    <p class="footer-title">Skyroam</p>
                     <ul>
-                        <li><a href="javascript:;">内容内容内容</a></li>
-                        <li><a href="javascript:;">内容内容内容</a></li>
-                        <li><a href="javascript:;">内容内容内容</a></li>
+                        <li><a href="javascript:;">サービス内容</a></li>
+                        <li><a href="javascript:;">取引先</a></li>
                     </ul>
                 </div>
             </div>
             <div class="footer-con-r">
                 <div class="phone">
                     <p class="phone-num">03-6279-0521</p>
-                    <p class="phone-dz">联系地址地地</p>
+                    <p class="phone-dz">お問い合わせはこちら</p>
                 </div>
                 <div class="phone-icon">
                     <img src="image/phoneicon.png" alt="">
@@ -133,7 +228,7 @@
     </div>
     <div class="footer-ft">
         <p>
-            Copyright 2016 CLOOPEN.ALL rights reserved.
+            Copyright © 2016 CLOOPEN. All rights reserved.
         </p>
     </div>
 </div>
