--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
 </div>
 <!--介绍开始-->
 <div class="con">
-    <div class="con-continer">
+    <div class="con-continer" style="font-weight: bold">
         <ul>
             <li class="con-tit">社名</li>
             <li class="con-con">Cloopen株式会社</li>
@@ -103,6 +103,33 @@
         <ul>
             <li class="con-tit">資本金</li>
             <li class="con-con">80,000,000円</li>
+        </ul>
+        <ul>
+            <li class="con-tit">設立</li>
+            <li class="con-con">平成28年10月</li>
+        </ul>
+        <ul>
+            <li class="con-tit">従業員数</li>
+            <li class="con-con">10名</li>
+        </ul>
+        <ul>
+            <li class="con-tit">取引先銀行</li>
+            <li class="con-con">りそな銀行</li>
+        </ul>
+        <ul>
+            <li class="con-tit">事業内容</li>
+            <li class="con-con">
+                <p>1．電気通信事業法に基づく電気通信事業</p>
+                <p>2．電気通信設備及びこれに付帯する設備の開発、販売、保守、管理並びに賃貸</p>
+                <p>3．インターネットを利用した情報提供サービス</p>
+                <p>4．通信端末の販売</p>
+                <p>5．ソフトウェアの開発及び販売</p>
+                <p>6．全各号に付帯する一切の業務</p>
+            </li>
+        </ul>
+        <ul>
+            <li class="con-tit">認証取得</li>
+            <li class="con-con">電気通信事業届出番号：A-28-15417</li>
         </ul>
         <ul>
             <li class="con-tit">本社所在地</li>
