--- a/three.html
+++ b/three.html
@@ -89,7 +89,7 @@
 <div class="banner">
     <img src="image/未标题-2.png" alt="">
     <div class="banner-but">
-        バナー
+        一歩先の満足
     </div>
 </div>
 <!--介绍开始-->
