--- a/three.html
+++ b/three.html
@@ -37,6 +37,9 @@
                 $('.twonav').each(function() {
                     PIE.attach(this);
                 })
+                $('.header').each(function() {
+                    PIE.attach(this);
+                })
 
             }
             $('.fullSlide').mouseover(function(){
@@ -54,6 +57,14 @@
             }).mouseout(function(){
                 var eq=$(this).index()
                 $('.twonav').eq(eq).hide();
+            })
+            /*导航*/
+            $(window).scroll(function(){
+                if($(window).scrollTop()>=$('.header').get(0).offsetHeight){
+                    $('.header').css({position:'absolute',top:$(window).scrollTop()})
+                }else{
+                    $('.header').css({position:'relative',top:0})
+                }
             })
 
         })
