--- a/about.html
+++ b/about.html
@@ -8,12 +8,16 @@
     <script src="js/Slide.js"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8" />
     <link rel="stylesheet" href="css/about.css">
-    <!--[if lt IE 9]>
+    <link rel="stylesheet" href="css/headfoot.css">
+    <!--[if IE 8]>
     <script type="text/javascript" src="js/PIE_IE678.js"></script>
     <link rel="stylesheet" href="css/aboutmin.css">
+    <link rel="stylesheet" href="css/headfootmin.css">
     <![endif]-->
     <!--[if IE 9]>
     <script type="text/javascript" src="js/PIE_IE9.js"></script>
+    <link rel="stylesheet" href="css/aboutmin.css">
+    <link rel="stylesheet" href="css/headfootmin.css">
     <![endif]-->
 
     <script>
@@ -93,6 +97,7 @@
     </div>
 </div>
 <!--banner开始-->
+<div class="box">
 <div class="banner">
     <img src="image/aboutbanner.png" alt="">
 </div>
@@ -175,6 +180,7 @@
             <li class="con-con">平成28年10月</li>
         </ul>
     </div>
+</div>
 </div>
 <!--页脚-->
 <div class="footer">
