--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
     <script src="js/Slide.js"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8" />
     <link rel="stylesheet" href="css/indexmain.css">
+    <link rel="stylesheet" href="css/headfoot.css">
     <!--[if IE 8]>
     <script type="text/javascript" src="js/PIE_IE678.js"></script>
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/headfootmin.css">
     <![endif]-->
     <!--[if IE 9]>
     <script type="text/javascript" src="js/PIE_IE9.js"></script>
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/headfootmin.css">
     <![endif]-->
     <script>
         $(document).ready(function(){
@@ -90,6 +93,7 @@
         </div>
     </div>
 </div>
+<div class="box">
 <div class="banner fullSlide">
     <div class="bd">
         <ul>
@@ -178,6 +182,7 @@
          </div>
         </div>
     </div>
+</div>
 </div>
 <div class="footer">
     <div class="footer-con">
