--- a/three.html
+++ b/three.html
@@ -8,12 +8,16 @@
     <script src="js/Slide.js"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8" />
     <link rel="stylesheet" href="css/three.css">
-    <!--[if lt IE 9]>
+    <link rel="stylesheet" href="css/headfoot.css">
+    <!--[if IE 8]>
     <script type="text/javascript" src="js/PIE_IE678.js"></script>
     <link rel="stylesheet" href="css/threemin.css">
+    <link rel="stylesheet" href="css/headfootmin.css">
     <![endif]-->
     <!--[if IE 9]>
     <script type="text/javascript" src="js/PIE_IE9.js"></script>
+    <link rel="stylesheet" href="css/threemin.css">
+    <link rel="stylesheet" href="css/headfootmin.css">
     <![endif]-->
 
     <script>
@@ -97,6 +101,7 @@
     </div>
 </div>
 <!--banner开始-->
+<div class="box">
 <div class="banner">
     <img src="image/未标题-2.png" alt="">
     <div class="banner-but">
@@ -199,6 +204,7 @@
             </ul>
         </div>
     </div>
+</div>
 </div>
 <!--页脚-->
 <div class="footer">
