--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
 </div>
 <!--介绍开始-->
 <div class="con">
-    <div class="con-continer" style="font-weight: bold">
+    <div class="con-continer">
         <ul>
             <li class="con-tit">社名</li>
             <li class="con-con">Cloopen株式会社</li>
@@ -148,6 +148,18 @@
             <li class="con-con">電気通信事業届出番号：A-28-15417</li>
         </ul>
         <ul>
+            <li class="con-tit">TEL</li>
+            <li class="con-con">03-4588-0088</li>
+        </ul>
+        <ul>
+            <li class="con-tit">FAX</li>
+            <li class="con-con">03-6457-5209</li>
+        </ul>
+        <ul>
+            <li class="con-tit">設立</li>
+            <li class="con-con">平成28年10月</li>
+        </ul>
+        <ul>
             <li class="con-tit">本社所在地</li>
             <li class="con-con">〒160-0023  東京都新宿区西新宿6-12-1 パークウエスト12F </li>
         </ul>
@@ -167,18 +179,6 @@
                 <img src="image/login.gif" alt="">
             </div>
         </div>
-        <ul>
-            <li class="con-tit">TEL</li>
-            <li class="con-con">03-4588-0088</li>
-        </ul>
-        <ul>
-            <li class="con-tit">FAX</li>
-            <li class="con-con">03-6457-5209</li>
-        </ul>
-        <ul>
-            <li class="con-tit">設立</li>
-            <li class="con-con">平成28年10月</li>
-        </ul>
     </div>
 </div>
 </div>
