--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
                 <li><a href="javascript:;">製品紹介</a>
                 <div class="twonav">
                     <p><a href="javascript:;">Freecall</a></p>
-                    <p><a href="javascript:;">Cloopen SIM</a></p>
+                    <p><a href="three.html">Cloopen SIM</a></p>
                     <p><a href="javascript:;">Skyroam</a></p>
                 </div>
                 </li>
-                <li><a href="javascript:;">会社概要</a></li>
-                <li><a href="javascript:;">事業内容</a></li>
-                <li><a href="javascript:;">アクセス</a></li>
+                <li><a href="about.html?sT=one">会社概要</a></li>
+                <li><a href="about.html?sT=two">事業内容</a></li>
+                <li><a href="about.html?sT=three">アクセス</a></li>
                 <li><a href="javascript:;">問い合わせ</a></li>
             </ul>
         </div>
