--- a/three.html
+++ b/three.html
@@ -79,7 +79,7 @@
 <div class="header">
     <div class="header-con">
         <div class="logo">
-            <a href="javascript:;">
+            <a href="index.html">
                 <img src="image/logo.png">
             </a>
         </div>
@@ -88,13 +88,13 @@
                 <li><a href="javascript:;">製品紹介</a>
                     <div class="twonav">
                         <p><a href="javascript:;">Freecall</a></p>
-                        <p><a href="javascript:;">Cloopen SIM</a></p>
+                        <p><a href="three.html">Cloopen SIM</a></p>
                         <p><a href="javascript:;">Skyroam</a></p>
                     </div>
                 </li>
-                <li><a href="javascript:;">会社概要</a></li>
-                <li><a href="javascript:;">事業内容</a></li>
-                <li><a href="javascript:;">アクセス</a></li>
+                <li><a href="about.html?sT=one">会社概要</a></li>
+                <li><a href="about.html?sT=two">事業内容</a></li>
+                <li><a href="about.html?sT=three">アクセス</a></li>
                 <li><a href="javascript:;">問い合わせ</a></li>
             </ul>
         </div>
