--- a/about.html
+++ b/about.html
@@ -204,9 +204,9 @@
                 <div class="fnav">
                     <p class="footer-title">Company</p>
                     <ul>
-                        <li><a href="javascript:;">会社概要</a></li>
-                        <li><a href="javascript:;">事業内容</a></li>
-                        <li><a href="javascript:;">アクセス</a></li>
+                        <li><a href="javascript:;" class="lj">会社概要</a></li>
+                        <li><a href="javascript:;" class="lj">事業内容</a></li>
+                        <li><a href="javascript:;" class="lj">アクセス</a></li>
                     </ul>
                 </div>
                 <div class="fnav">
@@ -219,7 +219,7 @@
                 <div class="fnav">
                     <p class="footer-title">SIMカード</p>
                     <ul>
-                        <li><a href="javascript:;">サービス内容</a></li>
+                        <li><a href="three.html?sT=four">サービス内容</a></li>
                         <li><a href="javascript:;">取引先</a></li>
                     </ul>
                 </div>
