--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
                 <div class="fnav">
                     <p class="footer-title">Company</p>
                     <ul>
-                        <li><a href="javascript:;">会社概要</a></li>
-                        <li><a href="javascript:;">事業内容</a></li>
-                        <li><a href="javascript:;">アクセス</a></li>
+                        <li><a href="about.html?sT=one">会社概要</a></li>
+                        <li><a href="about.html?sT=two">事業内容</a></li>
+                        <li><a href="about.html?sT=three">アクセス</a></li>
                     </ul>
                 </div>
                 <div class="fnav">
@@ -211,7 +211,7 @@
                 <div class="fnav">
                     <p class="footer-title">SIMカード</p>
                     <ul>
-                        <li><a href="javascript:;">サービス内容</a></li>
+                        <li><a href="three.html?sT=four">サービス内容</a></li>
                         <li><a href="javascript:;">取引先</a></li>
                     </ul>
                 </div>
