--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                 <li><a href="javascript:;">製品紹介</a>
                 <div class="twonav">
                     <p><a href="javascript:;">Freecall</a></p>
-                    <p><a href="three.html">Cloopen SIM</a></p>
-                    <p><a href="javascript:;">Skyroam</a></p>
+                    <p><a href="three.html">SIMカード</a></p>
+                    <p><a href="javascript:;">スカイローム</a></p>
                 </div>
                 </li>
                 <li><a href="about.html?sT=one">会社概要</a></li>
