--- a/about.html
+++ b/about.html
@@ -93,8 +93,8 @@
                 <li><a href="javascript:;">製品紹介</a>
                     <div class="twonav">
                     <p><a href="javascript:;">Freecall</a></p>
-                    <p><a href="three.html">Cloopen SIM</a></p>
-                    <p><a href="javascript:;">Skyroam</a></p>
+                    <p><a href="three.html">SIMカード</a></p>
+                    <p><a href="javascript:;">スカイローム</a></p>
                     </div>
                 </li>
                 <li><a href="javascript:;" class="lj">会社概要</a></li>
